Order List update

--- a/src/app/order/components/cart-list/cart-list.component.html
+++ b/src/app/order/components/cart-list/cart-list.component.html
@@ -45,6 +45,11 @@
                         <mat-icon>add_circle_outline</mat-icon>
                     </button>
                 </div>
+                <div>
+                    <button mat-icon-button color="warn" aria-label="Example icon-button with a heart icon" (click)='removeProduct(i)'>
+                        <mat-icon>clear</mat-icon>
+                    </button>
+                </div>
 
 
 
