--- a/src/app/product/components/add-product/add-product.component.html
+++ b/src/app/product/components/add-product/add-product.component.html
@@ -162,7 +162,7 @@
           </div>
 
           <div>
-            <mat-form-field>
+            <mat-form-field appearance='outline'>
               <mat-label>Category</mat-label>
               <mat-select formControlName="category">
                 <mat-option>-- None --</mat-option>
