--- a/src/app/product/components/single-product-view/single-product-view.component.html
+++ b/src/app/product/components/single-product-view/single-product-view.component.html
@@ -92,6 +92,12 @@
               <div fxFlex='80' class='font-size-20'>{{ supplierInfo.phoneNumber }}</div>
 
             </div>
+
+            <div fxLayout="row" fxLayoutAlign="start start">
+              <div fxFlex='20' class='font-size-20'>Reputation:</div>
+              <div fxFlex='80' class='font-size-20'>{{ supplierInfo.rating }}%</div>
+
+            </div>
           </div>
 
 
