--- a/src/app/customer/components/update-user-profile/update-user-profile.component.html
+++ b/src/app/customer/components/update-user-profile/update-user-profile.component.html
@@ -55,20 +55,20 @@
             </mat-form-field>
           </div>
 
-          <div>
-            <mat-form-field appearance="outline">
+          <!-- <div>
+            <mat-form-field appearance="outline" >
               <mat-label>Company Name</mat-label>
               <input type="text" matInput placeholder="Type in Company Name " formControlName="companyname" />
-              <!-- <mat-error
+              <mat-error
                         *ngIf="
                           signupform.get('lastname').touched &&
                           signupform.get('lastname').invalid
                         "
                       >
                         {{ errormessages.lastname }}</mat-error
-                      > -->
+                      >
             </mat-form-field>
-          </div>
+          </div> -->
           <div>
             <mat-form-field appearance="outline">
               <mat-label>Address</mat-label>
