--- a/src/app/product/components/modify-product/modify-product.component.html
+++ b/src/app/product/components/modify-product/modify-product.component.html
@@ -142,11 +142,11 @@
             </div>
             <div>
               <mat-form-field appearance="outline">
-                <mat-label>Product quanity</mat-label>
+                <mat-label>Minimum Order quanity</mat-label>
                 <input
                   type="number"
                   matInput
-                  placeholder="Type in product unit"
+                  placeholder="Type in minimum order quantity"
                   formControlName="productquantity"
                 />
                 <!-- <mat-error
