--- a/src/app/product/components/single-product-view/single-product-view.component.html
+++ b/src/app/product/components/single-product-view/single-product-view.component.html
@@ -103,9 +103,9 @@
 
         </div>
 
-        <div *ngIf='currentRole=="Customer"'>
+        <!-- <div *ngIf='currentRole=="Customer"'>
           <button mat-raised-button class='w-224' color='primary' (click)='buyProduct(productData)'>Buy Product</button>
-        </div>
+        </div> -->
 
       </div>
     </div>
